# mikan_player

./: .gitignore  README.md  README_en.md  build.yaml  build_apk.ps1  build_apk.sh  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml
android/: gradle.properties
android/app/: build.gradle.kts
docs/: bangumi_danmaku_integration.md  webview_concurrent_extraction.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
json/: server.js
lib/: main.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/models/: bangumi_user_collection.dart  local_favorite.dart  local_favorite.g.dart  user.dart
lib/services/: danmaku_service.dart  download_manager.dart  favorites_manager.dart  header_injection_proxy.dart  playback_history_manager.dart  settings_service.dart  subtitle_service.dart  user_manager.dart  webview_video_extractor.dart
lib/services/cache/: bangumi_cache_service.dart  cache.dart  cache_manager.dart  image_cache_service.dart
lib/src/: http_overrides.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/utils/: app_directories.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  build.rs
rust/.cargo/: config.toml
rust/src/: frb_generated.rs
rust/src/api/: bangumi.rs  config.rs  crawler.rs  danmaku.rs  dmhy.rs  generic_scraper.rs  mikan.rs  mod.rs  network.rs  ranking.rs  simple.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+50 files in other folders)
