[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
librqbit = { version = "8.1.1", features = ["http-api", "tracing-subscriber-utils"] }

axum = "0.8"
tower-http = "0.6" # Match librqbit's version
headers = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["rc", "derive"] }
anyhow = "1.0"
log = "0.4"

env_logger = "0.10"
lazy_static = "1.5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.19"
serde_json = "1.0"
regex = "1.12.2"
quick-xml = { version = "0.39.0", features = ["serialize"] }
url = "2.5.8"
urlencoding = "2.1.3"
fancy-regex = "0.17.0"
base64 = "0.22"
futures = "0.3"
aes = "0.8"
sha2 = "0.10"
dotenvy = "0.15"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
